modificamos el index

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>pagina</title>
 </head>
 <body>
-    
-</body>
+    <h1>titulo</h1>
+    <div>
+        <nav>
+            <h3>1</h3>
+            <h3>1</h3>
+            <h3>1</h3>
+        </nav>
+    </div>
+    <h3>seccion 1</h3>
+        <p>vslkjnfvñanaoiñdhvnasdñobasdvñaisdncosdvnasoudvbasdovibnasdvoub  
+        <p>SJFASNDOASJDNAOSID
+    <H3> seccion 2</H3>
+        <p>odnfsdocsaosidfnsdoifnakcma oisfnapsifnfsdoceoinbg</p>
+        <img src="" alt="algo">
+    </body>
 </html>
