--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
     <title>pagina</title>
 </head>
 <body>
-    <h1>titulo</h1>
-    <div>
-        <nav>
-            <h3>1</h3>
-            <h3>1</h3>
-            <h3>1</h3>
-        </nav>
+   <div class="contenedor">
+        <h1 class="titulo">titulo</h1>
+        <div class="navbar">
+            <nav>
+                <h3>HOLA</h3>
+                <h3>MUNDO</h3>
+                <h3>YEAH</h3>
+            </nav>
+        </div>
+        <h3>seccion 1</h3>
+            <p>vslkjnfvñanaoiñdhvnasdñobasdvñaisdncosdvnasoudvbasdovibnasdvoub  
+            <p>SJFASNDOASJDNAOSID
+        <H3> seccion 2</H3>
+            <p>odnfsdocsaosidfnsdoifnakcma oisfnapsifnfsdoceoinbg</p>
+            <img src="" alt="algo">
     </div>
-    <h3>seccion 1</h3>
-        <p>vslkjnfvñanaoiñdhvnasdñobasdvñaisdncosdvnasoudvbasdovibnasdvoub  
-        <p>SJFASNDOASJDNAOSID
-    <H3> seccion 2</H3>
-        <p>odnfsdocsaosidfnsdoifnakcma oisfnapsifnfsdoceoinbg</p>
-        <img src="" alt="algo">
     </body>
 </html>
